infra/k8s/production/api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: shopramsydev/api
          resources: {}
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
              - name: X-Custom-Header
                value: Awesome
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
              - name: X-Custom-Header
                value: Awesome
            failureThreshold: 30
            periodSeconds: 10   
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: api-srv
  namespace: production
spec:
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 3000
      targetPort: 3000
