infra/k8s/production/cart-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: shopramsydev/cart
          ports:
          - name: server-port
            containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: server-port
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: server-port
            failureThreshold: 30
            periodSeconds: 10 
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: cart-srv
  namespace: production
spec:
  selector:
    app: cart
  ports:
    - name: cart
      protocol: TCP
      port: 3000
      targetPort: 3000
