infra/k8s/production/categories-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categories-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: categories
  template:
    metadata:
      labels:
        app: categories
    spec:
      containers:
        - name: categories
          image: shopramsydev/categories
          resources: {}
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
              - name: X-Custom-Header
                value: Awesome
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
              - name: X-Custom-Header
                value: Awesome
            failureThreshold: 30
            periodSeconds: 10 
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: categories-srv
  namespace: production
spec:
  selector:
    app: categories
  ports:
    - name: categories
      protocol: TCP
      port: 3000
      targetPort: 3000
