infra/k8s/production/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis
          resources: {}
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
            tcpSocket:
              port: 6379
          readinessProbe:
            exec:
              command:
                - "redis-cli"
                - "PING"
                - "|"
                - "tr"
                - "-d"
                - "[:space:]"
                - "|"
                - "xargs"
                - "-n1"
                - "-r"
                - "test"
                - "PONG"
                - "="
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
  namespace: production
spec:
  selector:
    app: expiration-redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
