infra/k8s/production/logs-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logs
  template:
    metadata:
      labels:
        app: logs
    spec:
      containers:
        - name: logs
          image: shopramsydev/logs
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: logs-srv
spec:
  selector:
    app: logs
    namespace: production
  ports:
    - name: logs
      protocol: TCP
      port: 3000
      targetPort: 3000
