infra/k8s/production/logs-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-mongo-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logs-mongo
  template:
    metadata:
      labels:
        app: logs-mongo
    spec:
      containers:
        - name: logs-mongo
          image: mongo
          ports:
          - name: mongodb
            containerPort: 27017
          livenessProbe:
            exec:
              command:
              - mongo
              - --eval
              - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          readinessProbe:
            exec:
              command:
              - mongo
              - --eval
              - "db.adminCommand('ping')"
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          volumeMounts:
            - name: logs-mongo-storage
              mountPath: /data/db
      terminationGracePeriodSeconds: 10
      volumes:
        - name: logs-mongo-storage
          persistentVolumeClaim:
            claimName: logs-mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: logs-mongo-srv
  namespace: production
spec:
  selector:
    app: logs-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
