infra/k8s/production/media-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
        - name: logs
          image: shopramsydev/media
          resources: {}
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
              - name: X-Custom-Header
                value: LivenessProbe
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
              - name: X-Custom-Header
                value: ReadinessProbe
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
              - name: X-Custom-Header
                value: StartupProbe
            failureThreshold: 30
            periodSeconds: 10  
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: media-srv
  namespace: production
spec:
  selector:
    app: media
  ports:
    - name: media
      protocol: TCP
      port: 3000
      targetPort: 3000
