infra/k8s/production/media-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-mongo-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-mongo
  template:
    metadata:
      labels:
        app: media-mongo
    spec:
      containers:
        - name: media-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: media-mongo-srv
  namespace: production
spec:
  selector:
    app: media-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
