infra/k8s/production/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: shopramsydev/payments
          resources: {}
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
              - name: X-Custom-Header
                value: Awesome
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
              - name: X-Custom-Header
                value: Awesome
            failureThreshold: 30
            periodSeconds: 10   
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
  namespace: production
spec:
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
