infra/k8s/production/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: shopramsydev/products
          ports:
          - name: server-port
            containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: server-port
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: server-port
            failureThreshold: 30
            periodSeconds: 10    
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: products-srv
  namespace: production
spec:
  selector:
    app: products
  ports:
    - name: products
      protocol: TCP
      port: 3000
      targetPort: 3000
