infra/k8s/production/products-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-mongo-depl
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-mongo
  template:
    metadata:
      labels:
        app: products-mongo
    spec:
      containers:
        - name: products-mongo
          image: mongo
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - name: mongodb
            containerPort: 27017
          livenessProbe:
            exec:
              command:
              - mongo
              - --eval
              - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          readinessProbe:
            exec:
              command:
              - mongo
              - --eval
              - "db.adminCommand('ping')"
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          volumeMounts:
            - name: products-mongo-storage
              mountPath: /data/db
      terminationGracePeriodSeconds: 10
      volumes:
        - name: products-mongo-storage
          persistentVolumeClaim:
            claimName: products-mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: products-mongo-srv
  namespace: production
spec:
  selector:
    app: products-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
